# python-quanty

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: fit-zqc-transfer-along-zigzag-chain.py  qip-2022.py
quanty/: base.py  basis.py  json.py  optimize.py
quanty/entanglement/: laskowski_and_zukowski.py
quanty/geometry/: __init__.py  abc.py  chain.py
quanty/hamiltonian/: __init__.py  abc.py  xx.py  xxz.py  zz.py
quanty/matrix/: core.py  norm.py
quanty/model/: __init__.py  abc.py  homo.py
quanty/problem/: transfer.py
quanty/state/: __init__.py  coherence.py  lowtemp.py
quanty/task/: __init__.py  transfer.py  transfer_.py
quanty/tools/: json.py  wolfram_mathematica.py
tests/: _quanty.py  test_base.py  test_basis.py  test_json.py
tests/entanglement/: test_laskowski_and_zukowski.py
tests/geometry/: test_chain.py
tests/hamiltonian/: test_xx.py  test_xxz.py  test_zz.py
tests/matrix/: test_core.py
tests/model/: test_homo.py
tests/problem/: test_transfer.py
tests/state/: test_coherence.py  test_lowtemp.py
tests/task/: __init__.py  test_transfer.py
tests/task/assets/: impacts_n15_s3_a3_ex1.json  perfect_transferred_state_ex1_n3_a3.json  system_n15_s3_a3_ex1.json
