[project]
name = "quanty"
description =  "Framework to computing dynamic of quantum system"
version = "0.1.0"
authors = [
    { name = "Ilia Lazarev", email = "the.ilia.lazarev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "sympy",
    "numba",
]

[project.urls]
"Homepage" = "https://github.com/kephircheek/quanty"

[project.optional-dependencies]
lint = [
    "mypy",
    "isort[colors]",
    "black",
    "pydocstyle",
    "toml",
]
test = [
    "qutip",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pydocstyle]
ignore = [
    "D105",
    "D407",
    "D212",
    "D203",
    "D107",
]

[tool.black]
line-length = 90
